# cmake

./: FlagsManager.cmake  Printing.cmake  README.md  UseClang.cmake
example/cmake_local_debug/: CMakeLists.txt  Makefile
example/helloworld_clang/: CMakeLists.txt  Makefile  build
flag_overrides/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
script/: tempdir.sh
